--- a/app/assets/stylesheets/long-calendar.css.scss
+++ b/app/assets/stylesheets/long-calendar.css.scss
@@ -1,30 +1,53 @@
+$menuBackgroundColor: #EEF2F2;
+$borderColor: #D5D9D9;
+$menuLinkColor: #8DA0B2;
+$menuLinkHoverColor:#5B6773;
+$defaultButtonColor: #3498db;
+$infoButtonColor: #34495e;
+$warningButtonColor: #f1c40f;
+$errorButtonColor: #e74c3c;
+$disabledButtonColor: #95a5a6;
+$primaryButtonColor: #1abc9c;
+$successButtonColor: #2ecc71;
 .long-calendar {
   border-collapse: collapse;
   width: 100%;
   table-layout: fixed;
 
   td, th {
-    font-family: "Lucida Grande", arial, helvetica, sans-serif;
     font-size: 10px;
     padding: 6px;
     border: 1px solid #999;
   }
 
   th {
-    background: #DDD;
-    color: #666;
+    background: $menuBackgroundColor;
+    color: $menuLinkHoverColor;
     text-align: center;
-    width: 6.25%;
+    width: 5.8823%;
+    padding: 2px 9px;
+    line-height: 18px;
+    font-size: 12px;
+    font-weight: normal;
+    &.room-name-header{
+      width: 11.764705882%;
+    }
   }
 
   td {
     background: #FFF;
     color: #777;
     height: 20px;
-    // vertical-align: top;
     overflow:hidden;
     font-size: 12px;
-    width: 6.25%;
+    a{
+      color: $menuLinkColor;
+      &:hover{
+        text-decoration: none;
+        color: $menuLinkHoverColor;
+      }
+    }
+
   }
 
   .no-padding-left{
@@ -55,7 +78,7 @@
     padding-right: 14px;
   }
   .notmonth, .notmonth a { color: #CCC; }
-  .today { background-color: #D7F2FF; }
+  .today { background-color: lighten(#95A5A6, 35%); }
   .beforetoday { color: #999; }
 
 
@@ -64,7 +87,7 @@
     margin-left:55%;
     text-decoration: none;
     color: white;
-    background-color: #2ECC71;
+    background-color: $successButtonColor;
     padding-left: 4px;
     padding-right: 4px;
     -webkit-border-top-left-radius: 9px;
@@ -80,11 +103,7 @@
     height:14px;
     text-align:center;
     display:block;
-    // text-decoration: none;
-    // color: white;
-    background-color: #2ECC71;
-    // padding-left: 4px;
-    // padding-right: 4px;
+    background-color: $successButtonColor;
     
   }
 
@@ -93,7 +112,7 @@
     margin-right:7px;
     text-decoration: none;
     color: white;
-    background-color: #2ECC71;
+    background-color: $successButtonColor;
     padding-left: 4px;
     padding-right: 4px;
     -webkit-border-top-right-radius: 9px;
@@ -109,7 +128,7 @@
     margin-left:7px;
     text-decoration: none;
     color: white;
-    background-color: #2ECC71;
+    background-color: $successButtonColor;
     padding-left: 4px;
     padding-right: 4px;
     -webkit-border-top-left-radius: 9px;
@@ -124,7 +143,7 @@
     margin-right:55%;
     text-decoration: none;
     color: white;
-    background-color: #2ECC71;
+    background-color: $successButtonColor;
     padding-left: 4px;
     padding-right: 4px;
     -webkit-border-top-right-radius: 9px;
@@ -133,10 +152,6 @@
     -moz-border-radius-bottomright: 9px;
     border-top-right-radius: 9px;
     border-bottom-right-radius: 9px;
-  }
-
-  .reservation_link{
-    font-size: 12px;
   }
 }
 
