--- a/app/assets/stylesheets/notecard.css.scss
+++ b/app/assets/stylesheets/notecard.css.scss
@@ -1,7 +1,8 @@
 .notecard{
   padding-top: 20px;
-
-    .nameplate{
+  width: 70%;
+  margin: 0 auto;
+  .nameplate{
     text-align: center;
     font-size: 30px;
     line-height: 34px;
