--- a/app/views/layouts/webapp.html.haml
+++ b/app/views/layouts/webapp.html.haml
@@ -12,8 +12,12 @@
         .alert{class: "alert-#{key}"} #{value}
       / = render 'layouts/header' 
       .row
-        .span12#menubar
+        .span12
           = render 'layouts/menubar'
-        .span12#main-pane
-          = yield 
-      = debug(params) if Rails.env.development? 
+        .span12
+          = render 'layouts/contextbar'
+      .row
+        .span12
+          #content-pane
+            = yield 
+    = debug(params) if Rails.env.development? 
