--- a/app/views/rooms/daily.html.haml
+++ b/app/views/rooms/daily.html.haml
@@ -1,5 +1,10 @@
 .row
   .span10.offset1
+    .customSearch
+      .tableName
+        Reservations
+      .search
+        %input#searchBox{type:"text", placeholder: "Search"}
     %table.table-bordered.table-striped.table.display.dataTables-table
       %thead
         %tr
