--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -44,6 +44,7 @@ html {
 body {
   padding-top: 60px;
   padding-bottom: 40px;
+  color: $menuLinkHoverColor;
 }
 
 section {
@@ -54,13 +55,7 @@ textarea {
   resize: vertical;
 }
 
-a{
-  color: #1ABC9C;
-  // text-decoration: underline;
-  &:hover{
-    color: #16A085;
-  }
-}
+
 
 .center {
   text-align: center;
@@ -263,3 +258,6 @@ input {
     }
   }
 }
+
+
+
