--- a/app/assets/stylesheets/reservation-calendar.css.scss
+++ b/app/assets/stylesheets/reservation-calendar.css.scss
@@ -37,9 +37,8 @@
 #reservations #month {
   margin: 0;
   padding-bottom: 10px;
-  text-align: center;
   font-size: 22px;
-  color: black;
+  color: #333333;
   a {
     text-decoration: none;
     padding: 0 10px;
