--- a/app/views/receipts/index.html.haml
+++ b/app/views/receipts/index.html.haml
@@ -1,8 +1,11 @@
-.row
+.row  
   .span10.offset1
-    %hr
-  .span10.offset1
-    %table.table-bordered.table-striped.table.display.dataTables-table
+    .customSearch
+      .tableName
+        Receipts
+      .search
+        %input#searchBox{type:"text", placeholder: "Search"}
+    %table.table.display.dataTables-table
       %thead
         %tr
           %th View
